package eapli.shodrone.dronemanagement.domain;

public enum DroneStatus {
    ACTIVE,IN_REPAIR,DECOMMISSIONED
}
